--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
+
     <string name="app_name">Crew View</string>
+
+    <string name="base_url">https://slack.com/api/</string>
+
 </resources>
