Add shared element transition for user image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="base_url">https://slack.com/api/</string>
     <string name="username">\@%1$s</string>
 
+    <string name="avatar_transition">avatar_transition</string>
+
 </resources>
